Use separate overflow properties for webkit compatibility; fixes #2358

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,7 +70,8 @@
 
   &-workspace-add {
     height: 100%;
-    overflow: hidden auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding-top: 68px;
   }
 
